--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/styles": "^6.3.0",
+    "@mui/x-data-grid": "^7.23.5",
     "@reduxjs/toolkit": "^2.5.0",
     "cra-template": "1.2.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/react-router-dom": "^5.3.3",
