--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@mui/x-data-grid": "^7.23.5",
     "@reduxjs/toolkit": "^2.5.0",
     "cra-template": "1.2.0",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
@@ -49,6 +52,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.13",
     "@types/react": "^19.0.2",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^19.0.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.13"
