--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/styles": "^6.3.0",
     "@mui/x-data-grid": "^7.23.5",
     "@reduxjs/toolkit": "^2.5.0",
+    "axois": "^0.0.1-security",
     "cra-template": "1.2.0",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/lodash": "^4.17.13",
     "@types/react": "^19.0.2",
     "@types/react-date-range": "^1.4.9",
