--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/material": "^6.3.0",
     "@mui/styles": "^6.3.0",
     "@mui/x-data-grid": "^7.23.5",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axois": "^0.0.1-security",
     "cra-template": "1.2.0",
@@ -22,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.2.0",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.3.0"
