--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axois": "^0.0.1-security",
     "cra-template": "1.2.0",
     "date-fns": "^2.30.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^19.0.0",
